--- a/faq/index.html
+++ b/faq/index.html
@@ -76,7 +76,7 @@
     }
     </style>
     <title>bewu.ga - FAQ</title>
-    <meta name="description" content="często zadawane pytania (FAQ) o bewu i stronie bewu.ga">
+    <meta name="description" content="często zadawane pytania (FAQ) o bewu oraz stronie bewu.ga">
   </head>
   <body>
     <script>0</script>
