--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     }
     </style>
     <title>bewu.ga</title>
-    <meta name="description" content="bewu to ja, znany też jako bewuwy. tak, jestem komputerświrem, czemu pytasz?
-    poza tym mam projekty na Github, gry na Steam i konto w Minecraft i na Discord.">
+    <meta name="description" content="hej, jestem bewu aka bewuwy,
+    jestem komputerświrem oraz fanatykiem Pythona. ta strona to moja wizytówka">
   </head>
   <body>
     <script>0</script>
@@ -83,7 +83,7 @@
         </p>
 
         <div class="arrowDiv">
-          <p class="f16">zjedź niżej</p>
+          <p class="f16">o mnie</p>
           <img src="img/icons/arrow.webp" height="50vh" width="auto" alt="arrow" class="arrow" onclick="moveTo('#about')">
         </div>
       </div>
@@ -91,15 +91,15 @@
 
     <div class="banner" id="about">
       <div class="center">
-        <h2>hejka, jestem bewu</h2>
+        <h2>hej, jestem bewu</h2>
         <img src="img/picrew/asking.png" style="height: 25vh;">
         <p>kim dokładnie jestem?</p>
-        <p class="f16">świetne pytanie! jestem komputerświrem</p>
+        <p class="f16">świetne pytanie! jestem komputerświrem.</p>
         <p class="f16">zastanawiasz się teraz pewnie co to znaczy być komputerświrem, już odpowiadam</p>
-        <p class="f16">więc no umiem klikać w komputer i zrobiłem pare projektów, no i jeszcze jestem introwertykiem</p>
+        <p class="f16">no więc umiem klikać w komputer i zrobiłem pare projektów, no i jeszcze jestem introwertykiem</p>
 
         <div class="arrowDiv">
-          <p class="f16">zjedź niżej</p>
+          <p class="f16">moje projekty</p>
           <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#projects')">
         </div>
       </div>
@@ -115,7 +115,7 @@
           <p class="f16"><a href="/projects/" rel="next">pełna lista moich projektów</a></p>
 
           <div class="arrowDiv">
-            <p class="f16">zjedź niżej</p>
+            <p class="f16">koniec</p>
             <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#footer')">
           </div>
       </div>
