--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
     }
     </script>
     <title>bewu.ga - projects</title>
-    <meta name="description" content="(prawie)wszystko o bewu (o mnie)">
+    <meta name="description" content="wszystkie projekty bewu, które są dostępne">
   </head>
   <body>
     <script>0</script>
