added footer everywhere

--- a/index.html
+++ b/index.html
@@ -51,82 +51,86 @@
     jestem komputerświrem oraz fanatykiem Pythona. ta strona to moja wizytówka">
   </head>
   <body>
-    <script>0</script>
+    <div id="page-container">
+      <script>0</script>
 
-    <div class="banner" id="start">
-      <a href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
-        <img src="img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
-      </a>
+      <div id="content-wrap">
+        <div class="banner" id="start">
+          <a alt="bewu.ga" href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
+            <img src="img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
+          </a>
 
-      <div class="center">
-        <h1>bewu</h1>
-        <p>tak, to ja, bewu</p>
+          <div class="center">
+            <h1>bewu</h1>
+            <p>tak, to ja, bewu</p>
 
-        <p>
-          <img src="img/icons/discord.svg" alt="Discord" width="auto" height="22" class="icon">
-          <a href="https://discord.com" rel="noreferrer" target="_blank">bewu#0764</a>
-        </p>
+            <p>
+              <img src="img/icons/discord.svg" alt="Discord" width="auto" height="22" class="icon">
+              <a href="https://discord.com" rel="noreferrer" target="_blank">bewu#0764</a>
+            </p>
 
-        <p>
-          <img src="img/icons/github.svg" alt="Github" width="auto" height="30" class="icon">
-          <a href="https://github.com/bewuwy" rel="noreferrer" target="_blank">bewuwy</a>
-        </p>
+            <p>
+              <img src="img/icons/github.svg" alt="Github" width="auto" height="30" class="icon">
+              <a href="https://github.com/bewuwy" rel="noreferrer" target="_blank">bewuwy</a>
+            </p>
 
-        <p>
-          <img src="img/icons/steam.svg" alt="Steam" width="auto" height="30" class="icon">
-          <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">bewu</a>
-        </p>
+            <p>
+              <img src="img/icons/steam.svg" alt="Steam" width="auto" height="30" class="icon">
+              <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">bewu</a>
+            </p>
 
-        <p>
-          <img src="img/icons/mc.svg" alt="Minecraft" width="auto" height="30" class="icon">
-          <a href="https://mine.ly/b3wu.1" rel="noreferrer" target="_blank">b3wu</a>
-        </p>
+            <p>
+              <img src="img/icons/mc.svg" alt="Minecraft" width="auto" height="30" class="icon">
+              <a href="https://mine.ly/b3wu.1" rel="noreferrer" target="_blank">b3wu</a>
+            </p>
 
-        <div class="arrowDiv">
-          <p class="f16">o mnie</p>
-          <img src="img/icons/arrow.webp" height="50vh" width="auto" alt="arrow" class="arrow" onclick="moveTo('#about')">
-        </div>
-      </div>
-    </div>
-
-    <div class="banner" id="about">
-      <div class="center">
-        <h2>hej, jestem bewu</h2>
-        <img src="img/picrew/asking.png" style="height: 25vh;">
-        <p>kim dokładnie jestem?</p>
-        <p class="f16">świetne pytanie! jestem komputerświrem.</p>
-        <p class="f16">zastanawiasz się teraz pewnie co to znaczy być komputerświrem, już odpowiadam</p>
-        <p class="f16">no więc umiem klikać w komputer i zrobiłem pare projektów, no i jeszcze jestem introwertykiem</p>
-
-        <div class="arrowDiv">
-          <p class="f16">moje projekty</p>
-          <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#projects')">
-        </div>
-      </div>
-    </div>
-
-    <div class="banner" id="projects">
-      <div class="center">
-          <h2>Projekty</h2>
-          <p class="f16">większość moich projektów jest napisana w Pythonie, jednak staram się uczyć jak największej ilości języków.</p>
-          <p class="f16">ta strona na przykład napisana jest w całości w HTML i CSS.</p>
-          <p class="f16">oprócz tego znam jeszcze podstawy Javy i prawie podstawy C++</p>
-          <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
-          <p class="f16"><a href="/projects/" rel="next">pełna lista moich projektów</a></p>
-
-          <div class="arrowDiv">
-            <p class="f16">koniec</p>
-            <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#footer')">
+            <div class="arrowDiv">
+              <p class="f16">o mnie</p>
+              <img src="img/icons/arrow.webp" height="50vh" width="auto" alt="arrow" class="arrow" onclick="moveTo('#about')">
+            </div>
           </div>
-      </div>
-    </div>
+        </div>
 
-    <footer id="footer" style="background-color: #0c0d0e;">
-      <div class="center" style="padding-bottom: 0; padding-top: 0;">
-        <p class="f16"><a href="/faq/" rel="next">faq</a></p>
-        <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repo</a></p>
-        <p class="f16">©2021 Bartek Włodarczyk</p>
+        <div class="banner" id="about">
+          <div class="center">
+            <h2>hej, jestem bewu</h2>
+            <img src="img/picrew/asking.png" style="height: 25vh;">
+            <p>kim dokładnie jestem?</p>
+            <p class="f16">świetne pytanie! jestem komputerświrem.</p>
+            <p class="f16">zastanawiasz się teraz pewnie co to znaczy być komputerświrem, już odpowiadam</p>
+            <p class="f16">no więc umiem klikać w komputer i zrobiłem pare projektów, no i jeszcze jestem introwertykiem</p>
+
+            <div class="arrowDiv">
+              <p class="f16">moje projekty</p>
+              <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#projects')">
+            </div>
+          </div>
+        </div>
+
+        <div class="banner" id="projects">
+          <div class="center">
+              <h2>Moje projekty</h2>
+              <p class="f16">większość moich projektów napisałem w Pythonie, jednak staram się uczyć jak największej ilości języków.</p>
+              <p class="f16">ta strona na przykład napisana jest w całości w HTML i CSS.</p>
+              <p class="f16">oprócz tego znam jeszcze podstawy Javy i prawie podstawy C++</p>
+              <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
+              <p class="f16"><a href="/projects/" rel="next" alt="Projects">pełna lista moich projektów</a></p>
+
+              <div class="arrowDiv">
+                <p class="f16">koniec</p>
+                <img src="img/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#footer')">
+              </div>
+          </div>
+        </div>
       </div>
-    </footer>
+
+      <footer id="footer" style="background-color: #0c0d0e;">
+        <div class="center" style="padding-bottom: 0; padding-top: 0;">
+          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
+          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
+          <p class="f16">©2021 Bartek Włodarczyk</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
