--- a/faq/index.html
+++ b/faq/index.html
@@ -79,50 +79,59 @@
     <meta name="description" content="często zadawane pytania (FAQ) o bewu oraz stronie bewu.ga">
   </head>
   <body>
-    <script>0</script>
+    <div id="page-container">
+      <script>0</script>
 
-    <a href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
-      <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
-    </a>
-    <div class="center">
-      <h1>FAQ</h1>
-      <h2>często zadawane pytania o bewu i tej stronie</h2>
-      <p class="f16">jak na razie nikt mi nie zadał żadnego pytania, ale to nieważne, to są "często zadawane pytania"</p>
-      <br/>
+      <div id="content-wrap">
+        <a alt="bewu.ga" href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
+          <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
+        </a>
+        <div class="center">
+          <h1>FAQ</h1>
+          <h2>często zadawane pytania o bewu i tej stronie</h2>
+          <p class="f16">jak na razie nikt mi nie zadał żadnego pytania, ale to nieważne, to są "często zadawane pytania"</p>
+          <br/>
 
-      <ul style="padding-right: 40px;">
-        <li>
-          <p class="f20">Dlaczego istnieje sekcja FAQ?</p>
-          <p class="f16">Po to, żeby odpowiedzieć na wszystkie nurtujące pytania.</p>
-        </li>
-        <li>
-          <p class="f20">Kim jest bewu?</p>
-          <p class="f16"><strong>bewu</strong> to ja, bartek. <br/> <a href="../#about" rel="next">więcej</a>.</p>
-        </li>
-        <li>
-          <p class="f20">Czym jest strona bewu.ga?</p>
-          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty.</p>
-        </li>
-        <li>
-          <p class="f20">Jak została stworzona ta strona?</p>
-          <p class="f16">Strona <a href="../" rel="prev">bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy" rel="noreferrer">na stronie projektu na Githubie</a>.</p>
-        </li>
-        <li>
-          <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
-          <p class="f16">Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>
-        </li>
-        <li>
-          <p class="f20">Na jakim hardwarze działa bewu?</p>
-          <p class="f16">W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory <strong>Intel i20</strong> oraz kartę graficzną <strong>Nvidia 5080 super</strong>.</p>
-        </li>
-        <li>
-          <p class="f20">Czym jest Nvidia rtx 5080 super?</p>
-          <p class="f16">Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na nowoczesnej i przełomowej architekturze bewuwy42069.</p>
-        </li>
-      </ul>
+          <ul style="padding-right: 40px;">
+            <li>
+              <p class="f20">Dlaczego istnieje sekcja FAQ?</p>
+              <p class="f16">Po to, żeby odpowiedzieć na wszystkie nurtujące pytania.</p>
+            </li>
+            <li>
+              <p class="f20">Kim jest bewu?</p>
+              <p class="f16"><strong>bewu</strong> to ja, bartek. <br/> <a alt="O mnie" href="../#about" rel="next">więcej o mnie</a>.</p>
+            </li>
+            <li>
+              <p class="f20">Czym jest strona bewu.ga?</p>
+              <p class="f16">Strona <a alt="bewu.ga" href="../" rel="prev">bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty.</p>
+            </li>
+            <li>
+              <p class="f20">Jak została stworzona ta strona?</p>
+              <p class="f16">Strona <a alt="bewu.ga" href="../" rel="prev">bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href="https://github.com/bewuwy/bewuwy" rel="noreferrer">na stronie projektu na Githubie</a>.</p>
+            </li>
+            <li>
+              <p class="f20">Z jakiego oprogramowania korzysta bewu?</p>
+              <p class="f16">Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>
+            </li>
+            <li>
+              <p class="f20">Na jakim hardwarze działa bewu?</p>
+              <p class="f16">W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory <strong>Intel i20</strong> oraz kartę graficzną <strong>Nvidia 5080 super</strong>.</p>
+            </li>
+            <li>
+              <p class="f20">Czym jest Nvidia rtx 5080 super?</p>
+              <p class="f16">Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na nowoczesnej i przełomowej architekturze bewuwy42069.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
 
-      <br/>
-      <p class="f16"><a href="../" rel="prev">strona główna</a></p>
+      <footer id="footer" style="background-color: #0c0d0e;">
+        <div class="center" style="padding-bottom: 0; padding-top: 0;">
+          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
+          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
+          <p class="f16">©2021 Bartek Włodarczyk</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
