--- a/projects/index.html
+++ b/projects/index.html
@@ -23,20 +23,32 @@
     <meta name="description" content="wszystkie projekty bewu, które są dostępne">
   </head>
   <body>
-    <script>0</script>
+    <div id="page-container">
+      <script>0</script>
 
-    <a href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
-      <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
-    </a>
+      <div id="content-wrapper">
+        <a alt="bewu.ga" href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
+          <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
+        </a>
 
-    <div class="center">
-      <h1>moje projekty</h1>
+        <div class="center">
+          <h1>moje projekty</h1>
 
-      <p class="f16">
-        work in progress <progress value="40" max="100"></progress>
-      </p>
+          <p class="f16">
+            work in progress <progress value="40" max="100"></progress>
+          </p>
 
-      <p class="f16"><a href="../" rel="prev">strona główna</a></p>
+          <p class="f16"><a href="../" rel="prev">strona główna</a></p>
+        </div>
+      </div>
+
+      <footer id="footer" style="background-color: #0c0d0e;">
+        <div class="center" style="padding-bottom: 0; padding-top: 0;">
+          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
+          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
+          <p class="f16">©2021 Bartek Włodarczyk</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
