--- a/404.html
+++ b/404.html
@@ -10,10 +10,22 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div class="center">
-      <h1>404 error</h1>
-      <p>strona nieznaleziona. przykre :c</p>
-      <p>powrót na <a href="/">stronę główną</a></p>
+    <div id="page-container">
+      <div id="content-wrap">
+        <div class="center">
+          <h1>404 error</h1>
+          <p>strona nieznaleziona. przykre :c</p>
+          <p>powrót na <a href="/">stronę główną</a></p>
+        </div>
+      </div>
+
+      <footer id="footer" style="background-color: #0c0d0e;">
+        <div class="center" style="padding-bottom: 0; padding-top: 0;">
+          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
+          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
+          <p class="f16">©2021 Bartek Włodarczyk</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
