added ogp.me changed some texts

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,82 +1,95 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html prefix="og: http://ogp.me/ns#" lang="pl">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#181a1b"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#181a1b" />
 
-    <link rel="icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../style.css">
+    <title>bewu.ga | FAQ</title>
+    <meta name="description" content="często zadawane pytania (FAQ) o bewu oraz stronie bewu.ga" />
+    <meta property="og:title" content="bewu FAQ" />
+    <meta property="og:description" content="często zadawane pytania (FAQ) o bewu oraz stronie bewu.ga" />
+    <meta property="og:site_name" content="bewu.ga" />
+    <meta property="og:url" content="https://bewu.ga/faq/" />
+    <meta property="og:image" content="https://bewu.ga/img/picrew/asking.png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image:alt" content="bewu" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" href="../favicon.ico" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="sitemap" href="/sitemap.xml" />
+
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "faq",
-        "item": "https://bewu.ga/faq/"
-      }]
-    }
-    </script>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "FAQPage",
-      "mainEntity": [{
-        "@type": "Question",
-        "name": "Kim jest bewu?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "<strong>bewu</strong> to ja, bartek. <br/> <a href=https://bewu.ga/#about>więcej o mnie</a>."
-        }
-      }, {
-        "@type": "Question",
-        "name": "Czym jest strona bewu.ga?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Strona <a href=https://bewu.ga/>bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty."
-        }
-      }, {
-        "@type": "Question",
-        "name": "Jak została stworzona ta strona?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text":"Strona <a href=https://bewu.ga/>bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href=https://github.com/bewuwy/bewuwy rel=noreferrer>na stronie projektu na Githubie</a>."
-        }
-      }, {
-        "@type": "Question",
-        "name": "Z jakiego oprogramowania korzysta bewu?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>"
-        }
-      }, {
-        "@type": "Question",
-        "name": "Na jakim hardwarze działa bewu?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory Intel i20 oraz kartę graficzną Nvidia 5080 super."
-        }
-      },
       {
-        "@type": "Question:",
-        "name": "Czym jest Nvidia rtx 5080 super?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na architekturze bewuwy42069."
-        }
-      }]
-    }
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "faq",
+          "item": "https://bewu.ga/faq/"
+        }]
+      }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [{
+          "@type": "Question",
+          "name": "Kim jest bewu?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "<strong>bewu</strong> to ja, bartek. <br/> <a href=https://bewu.ga/#about>więcej o mnie</a>."
+          }
+        }, {
+          "@type": "Question",
+          "name": "Czym jest strona bewu.ga?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Strona <a href=https://bewu.ga/>bewu.ga</a> jest moją wizytówką, znajdują się tu moje konta społeczniościowe oraz projekty."
+          }
+        }, {
+          "@type": "Question",
+          "name": "Jak została stworzona ta strona?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text":"Strona <a href=https://bewu.ga/>bewu.ga</a> napisana jest w języku HTML, a style w języku CSS. Hostowana jest za pomocą Github Pages. Kod źródłowy strony dostępny jest <a href=https://github.com/bewuwy/bewuwy rel=noreferrer>na stronie projektu na Githubie</a>."
+          }
+        }, {
+          "@type": "Question",
+          "name": "Z jakiego oprogramowania korzysta bewu?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Obecnie <strong>bewu</strong> działa na Windowsie 10, ponieważ Linux nie.</p>"
+          }
+        }, {
+          "@type": "Question",
+          "name": "Na jakim hardwarze działa bewu?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "W najnowszych modelach <strong>bewu</strong> wykorzystujemy procesory Intel i20 oraz kartę graficzną Nvidia 5080 super."
+          }
+        },
+        {
+          "@type": "Question:",
+          "name": "Czym jest Nvidia rtx 5080 super?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nvidia rtx 5080 super posiada 15,000 rdzeni CUDA i zbudowana jest na architekturze bewuwy42069."
+          }
+        }]
+      }
+    </script>
+
     <style>
-    ul a {
-      color: white;
-      text-decoration: underline;
-    }
+      ul a {
+        color: white;
+        text-decoration: underline;
+      }
     </style>
-    <title>bewu.ga - FAQ</title>
-    <meta name="description" content="często zadawane pytania (FAQ) o bewu oraz stronie bewu.ga">
   </head>
   <body>
     <div id="page-container">
@@ -88,8 +101,8 @@
         </a>
         <div class="center">
           <h1>FAQ</h1>
-          <h2>często zadawane pytania o bewu i tej stronie</h2>
-          <p class="f16">jak na razie nikt mi nie zadał żadnego pytania, ale to nieważne, to są "często zadawane pytania"</p>
+          <h2>często zadawane pytania o tej stronie oraz bewu</h2>
+          <p class="f16">bo przecież dostaję ich tak wiele</p>
           <br/>
 
           <ul style="padding-right: 40px;">
