--- a/projects/index.html
+++ b/projects/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html prefix="og: http://ogp.me/ns#" lang="pl">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#181a1b"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#181a1b" />
 
-    <link rel="icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../style.css">
+    <title>bewu.ga | projekty</title>
+    <meta name="description" content="hej, jestem bewu, a to są moje projekty" />
+    <meta property="og:title" content="projekty bewu" />
+    <meta property="og:description" content="hej, jestem bewu, a to są moje projekty" />
+    <meta property="og:site_name" content="bewu.ga" />
+    <meta property="og:url" content="https://bewu.ga/projects/" />
+    <meta property="og:image" content="https://bewu.ga/img/picrew/asking.png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image:alt" content="bewu" />
+    <meta property="og:type" content="website" />
+
+    <link rel="icon" href="../favicon.ico" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="sitemap" href="/sitemap.xml" />
+
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "projects",
-        "item": "https://bewu.ga/projects/"
-      }]
-    }
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "projects",
+          "item": "https://bewu.ga/projects/"
+        }]
+      }
     </script>
-    <title>bewu.ga - projects</title>
-    <meta name="description" content="wszystkie projekty bewu, które są dostępne">
   </head>
   <body>
     <div id="page-container">
