--- a/404.html
+++ b/404.html
@@ -2,12 +2,13 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8">
-    <title>bewu.ga - not found</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/favicon/favicon.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <title>bewu.ga | not found</title>
+
+    <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="sitemap" href="/sitemap.xml" />
   </head>
   <body>
     <div id="page-container">
