--- a/404.html
+++ b/404.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html lang="pl">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+---
+layout: default
+title : bewu.ga | not found
+description: bewu.ga | page not found
+---
 
-    <title>bewu.ga | not found</title>
-
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="sitemap" href="/sitemap.xml" />
-  </head>
-  <body>
-    <div id="page-container">
-      <div id="content-wrap">
-        <div class="center">
-          <h1>404 error</h1>
-          <p>strona nieznaleziona. przykre :c</p>
-          <p>powrót na <a href="/">stronę główną</a></p>
-        </div>
-      </div>
-
-      <footer id="footer" style="background-color: #0c0d0e;">
-        <div class="center" style="padding-bottom: 0; padding-top: 0;">
-          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
-          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
-          <p class="f16">©2021 Bartek Włodarczyk</p>
-        </div>
-      </footer>
-    </div>
-  </body>
-</html>
+<div class="center">
+  <h1>404 error</h1>
+  <p>strona nieznaleziona. przykre :c</p>
+  <p>powrót na <a href="/">stronę główną</a></p>
+</div>
