--- a/projects/index.html
+++ b/projects/index.html
@@ -1,66 +1,18 @@
-<!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#" lang="pl">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#181a1b" />
+---
+layout: default
+title: bewu.ga | projekty
+description: hej, jestem bewu, a to są moje projekty
+head_include: script_projects.html
+---
 
-    <title>bewu.ga | projekty</title>
-    <meta name="description" content="hej, jestem bewu, a to są moje projekty" />
-    <meta property="og:title" content="projekty bewu" />
-    <meta property="og:description" content="hej, jestem bewu, a to są moje projekty" />
-    <meta property="og:site_name" content="bewu.ga" />
-    <meta property="og:url" content="https://bewu.ga/projects/" />
-    <meta property="og:image" content="https://bewu.ga/img/picrew/asking.png" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:image:alt" content="bewu" />
-    <meta property="og:type" content="website" />
+{% include logo.html %}
 
-    <link rel="icon" href="../favicon.ico" />
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="sitemap" href="/sitemap.xml" />
+<div class="center">
+  <h1>moje projekty</h1>
 
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [{
-          "@type": "ListItem",
-          "position": 1,
-          "name": "projects",
-          "item": "https://bewu.ga/projects/"
-        }]
-      }
-    </script>
-  </head>
-  <body>
-    <div id="page-container">
-      <script>0</script>
+  <p class="f16">
+    work in progress <progress value="40" max="100"></progress>
+  </p>
 
-      <div id="content-wrapper">
-        <a alt="bewu.ga" href="/" rel="prev" style="display: inline-block; margin: 30px; margin-bottom: 10px;">
-          <img src="../img/logo/bewu_long.png" alt="bewu.ga" style="height: 6vh; width: auto;">
-        </a>
-
-        <div class="center">
-          <h1>moje projekty</h1>
-
-          <p class="f16">
-            work in progress <progress value="40" max="100"></progress>
-          </p>
-
-          <p class="f16"><a href="../" rel="prev">strona główna</a></p>
-        </div>
-      </div>
-
-      <footer id="footer" style="background-color: #0c0d0e;">
-        <div class="center" style="padding-bottom: 0; padding-top: 0;">
-          <p class="f16"><a href="/faq/" rel="next" alt="FAQ">faq</a></p>
-          <p class="f16"><a href="https://github.com/bewuwy/bewuwy" rel="nofollow">github repository</a></p>
-          <p class="f16">©2021 Bartek Włodarczyk</p>
-        </div>
-      </footer>
-    </div>
-  </body>
-</html>
+  <p class="f16"><a href="../" rel="prev">strona główna</a></p>
+</div>
