--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ head_include: script_index.html
       <p class="f16">większość moich projektów napisałem w Pythonie i nie obchodzi mnie, że jest wolny</p>
       <p class="f16">no i oprócz tego znam jeszcze podstawy Javy, prawie podstawy C++, no i trochę HTML i CSS</p>
       <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
-      <p class="f16"><a href="/projects/" rel="next" alt="Projects">moje projekty</a></p>
+      <p class="f16"><a href="/projects" rel="next" alt="Projects">moje projekty</a></p>
 
       <div class="arrowDiv">
         <p class="f16">koniec</p>
