--- a/projects.html
+++ b/projects.html
@@ -14,5 +14,5 @@ head_include: script_projects.html
     work in progress <progress value="40" max="100"></progress>
   </p>
 
-  <p class="f16"><a href="../" rel="prev">strona główna</a></p>
+  <p class="f16"><a href="/" rel="prev">strona główna</a></p>
 </div>
