added youtube link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ head_include: script_index.html
     </p>
 
     <p>
+      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30" class="icon">
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" rel="noreferrer" target="_blank">bewuwy</a>
+    </p>
+
+    <p>
       <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30" class="icon">
       <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">bewu</a>
     </p>
