--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@ repositories:
   <h1>moje projekty</h1>
 
   {% for i in page.repositories %}
-  <a href="https://github.com/{{ page.github_user }}/{{ i }}" target="_blank">
-    <img src="https://github-readme-stats.vercel.app/api/pin/?username={{ page.github_user }}&repo={{ i }}&theme=dark" style="max-width: 80%;"></img>
+  <a href="https://github.com/{{ page.github_user }}/{{ i }}" rel="noreferrer" target="_blank">
+    <img src="https://github-readme-stats.vercel.app/api/pin/?username={{ page.github_user }}&repo={{ i }}&theme=dark" style="max-width: 80%;" alt="{{ i }}"></img>
   </a>
   {% endfor %}
 </div>
