--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@ head_include: script_projects.html
 github_user: bewuwy
 repositories:
   - bewuwy
+  - mal-quiz
   - bad-apple-checkbox
   - alipaczka-py
   - lives-plugin
