days.html rarer checks

--- a/days.html
+++ b/days.html
@@ -30,6 +30,6 @@ nofooter: true
       }
 
       getData();
-      setInterval(getData, 30 * 1000)
+      setInterval(getData, 2 * 60 * 1000);
     }
 </script>
