--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ head_include: script_index.html
   <div class="center">
     <h2>hej, jestem bewu</h2>
     <img src="assets/picrew/asking.png" style="height: 25vh;">
-    <p>kim dokładnie jestem?</p>
-    <p class="f16">świetne pytanie! jestem komputerświrem.</p>
-    <p class="f16">zastanawiasz się teraz pewnie co to znaczy być komputerświrem</p>
-    <p class="f16">no więc umiem klikać w komputer i zrobiłem pare projektów</p>
+    <p>kim jestem?</p>
+    <p class="f16">dobre pytanie, jestem bewu.</p>
+    <p class="f16">co to znaczy być bewu? lol nie wiem</p>
+    <p class="f16">ale umiem klikać w komputer i zrobiłem pare projektów</p>
 
     <div class="arrowDiv">
       <p class="f16">moje projekty</p>
@@ -62,15 +62,15 @@ head_include: script_index.html
 
 <div class="banner" id="projects">
   <div class="center">
-      <h2>Moje projekty</h2>
+      <h2>moje projekty</h2>
       <p class="f16">większość moich projektów napisałem w Pythonie i nie obchodzi mnie, że jest wolny</p>
-      <p class="f16">no i oprócz tego znam jeszcze podstawy Javy, prawie podstawy C++, no i trochę HTML i CSS</p>
+      <p class="f16">no i oprócz tego znam jeszcze podstawy Javy, prawie podstawy C++, trochę HTML, Javascripta i CSS</p>
       <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
       <p class="f16"><a href="/projects" rel="next" alt="Projects">moje projekty</a></p>
 
       <div class="arrowDiv">
         <p class="f16">koniec</p>
-        <img src="assets/icons/arrow.webp" width="50" alt="arrow" class="arrow" onclick="moveTo('#footer')">
+        <img src="assets/icons/arrow.webp" width="50vw" alt="arrow" class="arrow" onclick="moveTo('#footer')">
       </div>
   </div>
 </div>
