--- a/days.html
+++ b/days.html
@@ -5,31 +5,4 @@ description: hej, jestem bewu aka weebuwy, a tyle dni zmarnowałem :D
 nofooter: true
 ---
 
-<link rel="stylesheet" href="/assets/css/odometer-theme-default.css">
-<script src="/assets/js/odometer.min.js"></script>
-
-<div style="height: 100vh; line-height: 100vh; text-align: center;">
-  <div style="vertical-align: middle; display: inline;">
-    <span class="odometer" id="days" style="margin: 0; font-size: 180px; font-weight: bold; text-shadow: 0px 0px 6px #fff, 0px 0px 6px #ccc; vertical-align: auto;">days</span>
-    <span class="odometer" id="episodes" style="margin: 0; font-size: 40px; vertical-align: auto;">episodes</span>
-  </div>
-</div>
-
-<script type="text/javascript">
-    window.onload = function() {
-      document.getElementById("days").innerHTML = "loading...";
-      document.getElementById("episodes").innerHTML = "loading..";
-
-      function getData() {
-        fetch('https://mal-days.herokuapp.com/api/bewu').then(function (response) {
-        	return response.json();
-        }).then(function (data) {
-          document.getElementById("days").innerHTML = data["days"];
-          document.getElementById("episodes").innerHTML = data["eps"];
-        })
-      }
-
-      getData();
-      setInterval(getData, 0.5 * 60 * 1000);
-    }
-</script>
+<iframe src="http://mal-days.herokuapp.com/render/bewu?bg=firewatch-blue" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
