--- a/days.html
+++ b/days.html
@@ -5,4 +5,4 @@ description: hej, jestem bewu aka weebuwy, a tyle dni zmarnowałem :D
 nofooter: true
 ---
 
-<iframe src="http://mal-days.herokuapp.com/render/bewu?bg=firewatch-blue" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
+<iframe src="https://stats.bewuwy.ga/mal/render/bewu?bg=firewatch-blue" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
