--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: bewu.ga | FAQ
+name: faq
 description: często zadawane pytania (FAQ) o stronie bewu.ga oraz bewu
 questions:
   - q: Dlaczego istnieje sekcja FAQ?
