--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: bewu.ga | projekty
+name: projects
 description: hej, jestem bewu, a to są moje projekty
 head_include: script_projects.html
 
